--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,24 @@ matrix:
 
 install:
     # скрипт настройки среды и установки зависимостей:
-    #- source ci/travis/install-$TRAVIS_OS_NAME.sh
+    - sudo apt-get update -q
+    - sudo apt-get install cppcheck -y
+    - sudo apt-get install python2.7 -y
+    - sudo apt-get install valgrind -y
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo apt-get update -q
+    - sudo apt-get install g++-9 -y
+    - sudo update-alternatives —install /usr/bin/g++ g++ /usr/bin/g++-9 90
+    - CMAKE_VERSION=3.15.4
+    - CMAKE_VERSION_DIR=v3.15
+    - CMAKE_OS=Linux-x86_64
+    - CMAKE_TAR=cmake-$CMAKE_VERSION-$CMAKE_OS.tar.gz
+    - CMAKE_URL=http://www.cmake.org/files/$CMAKE_VERSION_DIR/$CMAKE_..
+    - CMAKE_DIR=$(pwd)/cmake-$CMAKE_VERSION
+    - wget —quiet $CMAKE_URL
+    - mkdir -p $CMAKE_DIR
+    - tar —strip-components=1 -xzf $CMAKE_TAR -C $CMAKE_DIR
+    - export PATH=$CMAKE_DIR/bin:$PATH
 
 script:
     # скрипт сборки и тестирования проекта:
@@ -43,7 +60,7 @@ script:
     - cd build
     - cmake ..
     - cmake --build .
-    #- ctest --output-on-failure
+    - valgrind —tool=memcheck ./main
 
 deploy:
     # выкладываем tagged-коммиты на GitHub Releases:
