--- a/.travis.yml
+++ b/.travis.yml
@@ -42,16 +42,16 @@ install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update -q
     - sudo apt-get install g++-9 -y
-    - sudo update-alternatives —install /usr/bin/g++ g++ /usr/bin/g++-9 90
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 90
     - CMAKE_VERSION=3.15.4
     - CMAKE_VERSION_DIR=v3.15
     - CMAKE_OS=Linux-x86_64
     - CMAKE_TAR=cmake-$CMAKE_VERSION-$CMAKE_OS.tar.gz
-    - CMAKE_URL=http://www.cmake.org/files/$CMAKE_VERSION_DIR/$CMAKE_..
+    - https://vk.com/away.php?utf=1&to=http%3A%2F%2Fwww.cmake.org%2Ffiles%2F%24CMAKE_VERSION_DIR%2F%24CMAKE_TAR
     - CMAKE_DIR=$(pwd)/cmake-$CMAKE_VERSION
-    - wget —quiet $CMAKE_URL
+    - wget --quiet $CMAKE_URL
     - mkdir -p $CMAKE_DIR
-    - tar —strip-components=1 -xzf $CMAKE_TAR -C $CMAKE_DIR
+    - tar --strip-components=1 -xzf $CMAKE_TAR -C $CMAKE_DIR
     - export PATH=$CMAKE_DIR/bin:$PATH
 
 script:
@@ -60,7 +60,7 @@ script:
     - cd build
     - cmake ..
     - cmake --build .
-    - valgrind —tool=memcheck ./main
+    - valgrind --tool=memcheck ./main
 
 deploy:
     # выкладываем tagged-коммиты на GitHub Releases:
